# python-reqres.in

./: .gitignore  README.md  config.py  example-env.env  pyproject.toml
python_reqres_in/framework/: demo_qa.py
python_reqres_in/schemas/: user.py
python_reqres_in/utils/: attach.py  base_session.py
tests/: conftest.py
tests/api/: test_reqres_in.py
tests/web/: test_demoshop.py
